[package]
name = "oracles"
version = "0.18.2"
edition = "2021"
default-run = "oracles"
description = "Oracles"
homepage = "https://github.com/butaneprotocol/oracles"
repository = "https://github.com/butaneprotocol/oracles"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
almost-raft = "0.3.0"
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
bech32 = "0.11"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
chrono = "0.4"
cron = "0.14"
dashmap = "6"
ed25519 = { version = "2.2", features = ["pkcs8", "pem"] }
ed25519-dalek = { version = "2.1" }
frost-ed25519 = { version = "2.0.0-rc.0", features = ["serialization"] }
futures = "0.3"
hex = "0.4.3"
kupon = { git = "https://github.com/SundaeSwap-finance/kupon", rev = "ccc0b37" }
minicbor = { version = "0.25", features = ["derive", "std"] }
minicbor-io = { version = "0.20", features = ["async-io"] }
num-bigint = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["gzip-tonic", "tls-webpki-roots"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
pallas-crypto = "0.32"
pallas-primitives = "0.32"
rand = "0.8.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = "1.34.3"
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "tls12"] }
serde = "1"
serde_json = "1"
temp-env = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-websockets = { version = "0.11", features = ["client", "rustls-webpki-roots", "ring", "rand"] }
tonic = "0.12"
tracing = "0.1.40"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2" }

[package.metadata.dist]
dist = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "butaneprotocol/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"

[workspace.metadata.dist.dependencies.apt]
gcc-aarch64-linux-gnu = { version = '*', targets = ["aarch64-unknown-linux-gnu"] }
