[package]
name = "oracles"
version = "0.24.0"
edition = "2021"
default-run = "oracles"
description = "Oracles"
homepage = "https://github.com/butaneprotocol/oracles"
repository = "https://github.com/butaneprotocol/oracles"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
almost-raft = "0.3.0"
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
bech32 = "0.11"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
chrono = "0.4"
cron = "0.15"
dashmap = "6"
ed25519 = { version = "2.2", features = ["pkcs8", "pem"] }
ed25519-dalek = { version = "2.1" }
frost-ed25519 = { version = "2.1", features = ["serialization"] }
futures = "0.3"
hex = "0.4.3"
itertools = "0.14"
kupon = { git = "https://github.com/SundaeSwap-finance/kupon", rev = "ccc0b37" }
minicbor = { version = "0.26", features = ["derive", "std"] }
minicbor-io = { version = "0.21", features = ["async-io"] }
num-bigint = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"
opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic", "gzip-tonic", "tls-webpki-roots"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
pallas-crypto = { git = "https://github.com/txpipe/pallas", rev = "c3aad16" }
pallas-primitives = { git = "https://github.com/txpipe/pallas", rev = "c3aad16" }
rand = "0.8.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = "1"
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "tls12"] }
serde = "1"
serde_json = "1"
temp-env = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots" ]}
tokio-util = { version = "0.7", features = ["full"] }
tonic = "0.12"
tracing = "0.1.40"
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2" }

[package.metadata.dist]
dist = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
